# riskcal

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/source/: conf.py  index.md
docs/source/api/: accountants.rst  analysis.rst  calibration.rst  index.rst
research/attack_aware_noise_calibration/: .gitignore  README.md  pyproject.toml
research/tighter_analysis_synthetic_data/: zcdp_to_gdp.py
research/unifying_risk/: README.md  pyproject.toml  simulation_code.py
riskcal/: __init__.py  blackbox.py  conversions.py  dpsgd.py  plrv.py  utils.py  zcdp.py
src/riskcal/: conversions.py  plrv.py  utils.py
tests/: test_backward_compatibility.py  test_blackbox.py  test_conversions.py  test_dpsgd.py
