[project]
name = "attack-aware-noise-calibration"
version = "0.1.0"
description = "Reproducing the results."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "riskcal==1.0.0",
    "dp-accounting==0.4.4",
    "jupyter>=1.1.1",
    "jupytext>=1.17.1",
    "matplotlib==3.9.0",
    "numpy==1.26.4",
    "opacus==1.5.2",
    "pandas==2.2.2",
    "scikit-learn==1.5.0",
    "seaborn==0.13.2",
    "tqdm>=4.67.1",
]

[tool.uv.workspace]
exclude = ["riskcal"]
